# ticktick-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ticktick-openapi.md
src/: api.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
tests/: api_requests.rs  binary_behavior.rs  cli_actions.rs  config_output.rs
