[package]
name = "ticktick-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"
